Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26697

Unable to select which modules to build/notbuilt

XMLWordPrintable

    • 08ec2c7a620de84591552b57e396fe3fd404418c

      There are some configure options that allow certain modules to be enabled/disabled at configure time but no general approach.

      For example it would be ideal if configure's make and nomake option applied to which Qt modules are built e.g.:

      configure -make module1 module2 module5 module6 module7 ...

      and/or

      configure -nomake module3 module4 ...

      The workaround for this issue is to remove the source code of the modules not required then run configure as normal.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            buddenha Oswald Buddenhagen
            isdale Keith Isdale (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes